--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,9 @@ dependencies:
     sdk: flutter
   get: ^4.5.1
   cached_network_image: ^3.2.0
-  
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
+  dio: ^4.0.4
 
 dev_dependencies:
   flutter_test:
